# easy-table-tennis-event

./: .gitignore  CHANGELOG.md  CLAUDE.md  MVP_PLAN.md  MVP_ROADMAP.md  NEXT_STEPS.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-11-04.md  TESTING.md  TESTING_WSL.md  USER_GUIDE.md  UX_IMPROVEMENTS.md  beta_licenses_tracking.csv  build.py  create_bracket_matches.py  ettem.spec  fill_bracket_results.py  fill_results.py  launcher.py  pyproject.toml  release-please-config.json  requirements.txt  test_full_tournament.py  test_output.txt  test_players.csv  test_project.bat  test_project.sh
.claude/: settings.local.json
.claude/session_summaries/: session_2025-01-17.md  session_2026-01-23.md
.github/workflows/: release.yml
assets/: ettem.icns
config/: sample_config.yaml
data/samples/: pairs_md.csv  pairs_md_test.csv  pairs_unified_md.csv  pairs_wd.csv  pairs_xd.csv  players.csv  players_14.csv  players_20.csv  players_32.csv  players_doubles_md.csv  players_doubles_test.csv  players_doubles_wd.csv  players_doubles_xd.csv  teams_mt.csv  (+8 more)
docs/: CAPABILITIES.md  SALES_BROCHURE.docx  SALES_BROCHURE.md  TECHNICAL_GUIDE.md  USER_GUIDE.md  UX_NAVIGATION.md  landing_page.html
i18n/: strings_en.yaml  strings_es.yaml
server/: .htaccess
tests/: __init__.py  test_bracket.py  test_bracket_direct.py  test_cloud_id_mapping.py  test_cloud_sync.py  test_cloud_ui.py  test_direct_bracket_e2e.py  test_doubles_playwright.py  test_doubles_teams.py  test_export.py  test_groups.py  test_i18n.py  test_main.py  test_page_integrity.py  test_standings.py  test_storage.py  test_teams.py  test_validation.py  test_webapp_smoke.py
(+137 files in other folders)
